# Implementation-of-PCP-with-constant-and-low-soundness

./: .gitignore  CMakeLists.txt  README.md  test_three_color_gap_amplification_result.txt
.github/workflow/: main.yml
.github/workflows/: main.yml
data_analysis/: analyze_amplification.py  nonparametric_sampling.py  parse_results.py
include/: Aliases.hpp  BitPCP.hpp  PoweringPCP.hpp  constants.hpp  core.hpp  csp.hpp  three_col.hpp  util.hpp
include/analyzer/: PCPAnalyzer.hpp  SoundnessApproximater.hpp
include/constraint/: BinaryConstraint.hpp  BitConstraint.hpp  PoweringConstraint.hpp
include/core/: core.hpp
include/finite_field/: FiniteFieldElement.hpp  Monomial.hpp  NumberTheoreticTransform.hpp  Polynomial.hpp  UnivariatePolynomial.hpp  constant.hpp
include/hadamard/: Hadamard.hpp  Tester.hpp
include/pcp/: Aliases.hpp  BinaryCSP.hpp  BinaryDomain.hpp  BitDomain.hpp  BitPCP.hpp  PCP.hpp  PoweringPCP.hpp  SimplePCP.hpp
include/pcpp/: Encoder.hpp  Hadamard.hpp  Tester.hpp  TesterFactory.hpp  ThreeColorTester.hpp
include/pcpp/HadamardPCPP/: HadamardTester.hpp
include/pcpp/PseudoPCPP/: CSPSolver.hpp  PseudoTester.hpp
include/pcpp/ReedMullerPCPP/: LowDegreeTest.hpp  ReedMuller.hpp  ReedMullerTester.hpp  SummationTest.hpp
include/three_color/: ThreeColor.hpp  three_color.hpp
include/three_csp/: ThreeCSP.hpp
include/util/: disjoint_set_union.hpp  index_map_guard.hpp  random_picker.hpp  thread_pool.hpp  visit_guard.hpp
notes/: diss_outline.md  extension.md  extension.tex  logarithmic_randomness.md  notes.md  pcpp_composition.md  reed_muller_pcp.md
results/: ci_intervals_assignmentlifting.txt  ci_intervals_pseudo.txt  test_pcpp_soundness_result.txt  test_three_color_gap_amplification_amplification_result.txt  test_three_color_gap_amplification_hadamard_result.txt  test_three_color_gap_amplification_pseudo_result.txt
src/: BitPCP.cpp  PCPAnalyzer.cpp  PoweringPCP.cpp  core.cpp  csp.cpp  power_operation.cpp  three_col.cpp  util.cpp
src/ThreeCSP/: ThreeCSP.cpp
src/analyzer/: PCPAnalyzer.cpp  SoundnessApproximater.cpp
src/constraint/: BinaryConstraint.cpp  BitConstraint.cpp  PoweringConstraint.cpp
src/core/: gap_amplification.cpp  powering_operation.cpp  reduce_alphabet.cpp  reduce_degree.cpp  soundness_amplification.cpp  three_color_gap_amplification.cpp  three_coloring_to_BitPCP.cpp  to_expander.cpp
src/finite_field/: FiniteFieldElement.cpp  Monomial.cpp  NumberTheoreticTransform.cpp  Polynomial.cpp  UnivariatePolynomial.cpp
src/hadamard/: Hadamard.cpp  Tester.cpp
src/pcp/: BinaryCSP.cpp  BinaryDomain.cpp  BitDomain.cpp  BitPCP.cpp  PCP.cpp  PoweringPCP.cpp  SimplePCP.cpp
src/pcpp/: Encoder.cpp  Hadamard.cpp  Tester.cpp  TesterFactory.cpp  ThreeColorTester.cpp
src/pcpp/HadamardPCPP/: Hadamard.cpp  HadamardTester.cpp
src/pcpp/PseudoPCPP/: CSPSolver.cpp  PseudoTester.cpp
src/pcpp/ReedMullerPCPP/: LowDegreeTest.cpp  ReedMuller.cpp  ReedMullerPCPP.cpp  SummationTest.cpp
src/three_color/: ThreeColor.cpp  generators.cpp  three_color.cpp
src/three_csp/: ThreeCSP.cpp
src/util/: disjoint_set_union.cpp  visit_guard.cpp
test/: CMakeLists.txt  get_radius_nodes_test.cpp  power_operation_test.cpp  test_Hadamard.cpp  test_PCPAnalyzer.cpp  test_Tester.cpp  test_get_neighbors.cpp  test_get_radius_nodes.cpp  test_power_operation.cpp  test_powering_operation.cpp  test_reduce_alphabet.cpp  test_reduce_degree.cpp  test_three_col.cpp  test_three_color_to_bitpcp.cpp  test_to_expander.cpp
test/e2e/: test_HadamardPCPP_soundness.cpp  test_LowDegreeTest.cpp  test_gap_amplification.cpp  test_gap_amplification_completeness.cpp  test_gap_amplification_soundness.cpp  test_pcpp_soundness.cpp  test_three_color_gap_amplification.cpp  test_three_color_gap_amplification_amplification.cpp  test_three_color_gap_amplification_completeness.cpp  test_three_color_gap_amplification_hadamard.cpp  test_three_color_gap_amplification_pseudo.cpp
test/unit/: test_CSPSolver.cpp  test_Hadamard.cpp  test_HadamardTester.cpp  test_NumberTheoreticTransform.cpp  test_PCPAnalyzer.cpp  test_Polynomial.cpp  test_PseudoTester.cpp  test_SoundnessApproximater.cpp  test_Tester.cpp  test_ThreeCSP.cpp  test_ThreeColorTester.cpp  test_UnivariatePolynomial.cpp  test_get_neighbors.cpp  test_powering_operation.cpp  test_random_picker.cpp  test_reduce_alphabet.cpp  test_reduce_degree.cpp  test_three_color_generators.cpp  test_three_color_to_BinaryCSP.cpp  test_three_color_to_bitpcp.cpp  test_to_expander.cpp
